add swagger description & fix naming
